Doc/force-app/main/default/objects/Personal_Objective__c/Personal_Objective__c.object-meta.xml
<CustomObject>
    <label>Personal Objective</label>
    <nameField>
        <label>Personal Objective</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>