Doc/force-app/main/default/objects/Personal_Objective__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>