Doc/force-app/main/default/objects/Personal_Objective__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup the employee here</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>