Doc/force-app/main/default/objects/Personal_Objective__c/fields/Practice_Group__c.field-meta.xml
<CustomField>
    <fullName>Practice_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice Group</label>
    <referenceTo>Practice_Group__c</referenceTo>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>