Doc/force-app/main/default/objects/Personal_Objective__c/fields/X3_month_Progress__c.field-meta.xml
<CustomField>
    <fullName>X3_month_Progress__c</fullName>
    <description>For each metric, how would you describe your progress so far?</description>
    <inlineHelpText>For each metric, how would you describe your progress so far?</inlineHelpText>
    <label>3-month Progress</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>