Doc/force-app/main/default/objects/Personal_Objective__c/fields/X6_month_Needs__c.field-meta.xml
<CustomField>
    <fullName>X6_month_Needs__c</fullName>
    <description>Now that this Planning Period has ended, what do you, your team or other parts of the company need to do to continue to support the intent of this objective ?</description>
    <inlineHelpText>Now that this Planning Period has ended, what do you, your team or other parts of the company need to do to continue to support the intent of this objective ?</inlineHelpText>
    <label>6-month Needs</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>